// $Id$

TO DO
------
* Ability to receive the same message through more than one channel. It should be possible to implement some ‘abstract’ sending method that pipes messages through two or more other channels.
* Sending messages to potential users, with a reserved user id. It seems we are already good for that with latest hooks introduced in notifications module.

6.x-1.0-beta1 to 6.x-1.0-rc1
----------------------------
- Creating a default input format on install, "Messaging plain text"
- Fixed parameter inconsistency, by darren.ferguson, #272545
- Some minor bug fixes, see 5.x changelog
- Reworked administration menu options, grouping all settings under Admin/Messaging
- Porting latest minor features from Drupal 5. Send method settings, etc..
- Fixing template form not showing, by BTMash, #251372

5.x-1.0-beta1 to 6.x-1.0-dev
-----------------------------
- Fixed issue with messaging log variable
- Quick Drupal 6 upgrade and some code clean up
- Ported latest patches from 5.x branch (MESSAGE_TYPE_NONE and help text)
- Split admin UI on its own file messaging.admin.inc

5.x-1.0-alpha2 to 5.x-1.0-beta1
--------------------------------
- Added formatting, pager and delete option for messaging_simple module
- Added formatting and pager for messaging_debug(), fixed some strings
- Fixed annoying hidden char issue for messaging_sms module, http://drupal.org/node/243246
- Added helper function messaging_mail_params()
- API change for consistency with queue processing: The send callback now takes a single destination
- Added $message['sender_account'] parameter
- Added some api documentation as function comments
- Fixed bug in queue processing, by jaydub
- New: Implemented message queueing and logging, big patch
- Reworked message pull hooks, now it doesn't rely on other modules
- Added some tests, covered message queueing and some plug-in APIs

5.x-1.0-alpha1 to 5.x-1.0-alpha2
--------------------------------