@@ -523,8 +523,9 @@ function messaging_message_render($message, $info) {
   if (!empty($message['rendered'])) {
     return $message;
   }
-  // Apply footer prefix if provided
-  if (!empty($info['footer']) && isset($message['body']['footer'])) {
+  // Apply footer prefix if provided and the message has a footer element. 
+  // Note: If message body is a string the final isset($message['body']['footer']) will be true
+  if (!empty($info['footer']) && is_array($message['body']) && isset($message['body']['footer'])) {
     $message['body']['footer'] = array('#prefix' => $info['footer'], '#text' => $message['body']['footer']);
   }
   // Render separately subject and body info, adding default parameters
@@ -729,4 +730,25 @@ function messaging_mail_headers($message, $params) {
   }  
 
   return $headers;
+}
+
+/**
+ * Implementation of hook_requirements()
+ */
+function messaging_requirements($phase) {
+  $requirements = array();
+  // Ensure translations don't break at install time
+  $t = get_t();
+  if ($phase == 'runtime') {
+    $methods = messaging_method_list();
+    // Ensure that we have some sending methods available
+    if (!$methods) {
+      $requirements['messaging']  = array(
+         'title' => $t('Messaging sending methods'),
+         'value' => $t('No sending method plug-ins available. Please enable some Sending Method on the !admin-modules page.', array('!admin-modules' => l($t('Modules administration'), 'admin/build/modules'))),
+         'severity' => REQUIREMENT_ERROR,
+      );
+    }
+  }
+  return $requirements;
 }
